--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,18 @@ services:
 before_install:
   - docker build -t vivektiwary/docker-react -f Dockerfile.dev .
 
+script:
+  - docker run -e CI=true vivektiwary/docker-react npm run test
 
-  # script: 
-  #   docker run -e CI=true USERNAME/docker-react npm run test
+deploy:
+  provider: elasticbeanstalk
+  region: "jap-south-1"
+  app: "docker-react"
+  env: "DockerReact-env-1"
+  bucket_name: "elasticbeanstalk-ap-south-1-323653169714"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+
+# access_key_id: $AWS_ACCESS_KEY
+# secret_access_key: $AWS_SECRET_KEY
