--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,5 @@ deploy:
   on:
     branch: master
 
-  access_key_id: $access_key_id
-  secret_access_key:
-    secure: "$secret_access_key"
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
